# realtime-control-gateway

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  entrypoint.sh
config/: default.toml
proto/connection/: control.proto  signaling.proto
src/: main.rs
src/app/: gateway_app.rs  mod.rs
src/config/: configs.rs
src/domain/: control.rs  convert.rs  mod.rs  signal.rs
src/protocol/: grpc.rs  mod.rs  websocket.rs
src/session/: manager.rs
