[package]
name = "realtime-control-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
config = "0.15.19"
tokio-tungstenite = "0.28.0"
futures-util = "0.3"