[package]
name = "realtime-control-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
config = "0.15.19"
tokio-tungstenite = "0.28.0"
futures-util = "0.3"
tonic = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
